upgrade to Java 17